# PokemonsCpp

./: CMakeLists.txt  Player.cpp  Player.h  Pokeball.cpp  Pokeball.h  PokemonParty.cpp  PokemonParty.h  SetOfPokemon.cpp  SetOfPokemon.h  States.cpp  States.h  main.cpp  pokedex.cpp  pokedex.h  pokemon.cpp  pokemon.h  readMe.md
